--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/Smedia.ico",
               "src/assets"
             ],
             "styles": [
@@ -80,6 +81,7 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
+              "src/Smedia.ico",
               "src/assets"
             ]
           }
